[gd_scene load_steps=4 format=3 uid="uid://ki08mjslq50j"]

[ext_resource type="Script" uid="uid://ualuxw2yjjqc" path="res://scenes/ability_node.gd" id="1_lu8ib"]
[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://assets/icon.svg" id="1_stut1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lu8ib"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AbilityNode" type="PanelContainer"]
offset_right = 96.0
offset_bottom = 123.0
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lu8ib")
script = ExtResource("1_lu8ib")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_stut1")

[connection signal="pressed" from="VBoxContainer/AbilityButton" to="." method="_on_ability_button_pressed"]
